<resources>

    <!-- App -->
    <string name="app_name">Break The Ice</string>

    <!-- Button -->
    <string name="button_search">Search</string>

    <!-- Fragment -->
    <string name="fragment_activity_detail">Detail</string>
    <string name="fragment_activity_filter">Search</string>
    <string name="fragment_activity_home">Hello, Raphael!</string>
    <string name="fragment_activity_list">My Activities</string>
    <string name="fragment_activity_type_list">My Activities: %s</string>

    <!-- Hint -->
    <string name="hint_filter_type">Filter by Type</string>
    <string name="hint_settings">Settings</string>
    <string name="hint_themes">Toggle Theme</string>

    <!-- Label-->
    <string name="label_accessibility_easy">Easy</string>
    <string name="label_accessibility_hard">Hard</string>
    <string name="label_accessibility_medium">Medium</string>
    <string name="label_accessibility_very_easy">Very Easy</string>
    <string name="label_accessibility_very_hard">Very Hard</string>
    <string name="label_activities">My Activities</string>
    <string name="label_app_bar">Hello, there!</string>
    <string name="label_categories">Categories</string>
    <string name="label_common_error">Something went wrong.</string>
    <string name="label_id">Id: %s</string>
    <string name="label_more">See More</string>
    <string name="label_participants">%d</string>

</resources>
