<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/activity_home_fragment">

    <dialog
        android:id="@+id/activity_filter_fragment"
        android:name="br.com.breaktheice.presentation.view.fragment.ActivityFilterFragment"
        android:label="@string/fragment_activity_filter"
        tools:layout="@layout/fragment_activity_filter" />

    <fragment
        android:id="@+id/activity_detail_fragment"
        android:name="br.com.breaktheice.presentation.view.fragment.ActivityDetailFragment"
        android:label="@string/fragment_activity_detail"
        tools:layout="@layout/fragment_activity_detail">

        <argument
            android:name="activityId"
            android:defaultValue="0"
            app:argType="integer" />

    </fragment>

    <fragment
        android:id="@+id/activity_home_fragment"
        android:name="br.com.breaktheice.presentation.view.fragment.ActivityHomeFragment"
        android:label="@string/fragment_activity_home"
        tools:layout="@layout/fragment_activity_home">

        <action
            android:id="@+id/action_home_to_detail"
            app:destination="@id/activity_detail_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right">

            <argument
                android:name="activityId"
                android:defaultValue="0"
                app:argType="integer" />

        </action>

        <action
            android:id="@+id/action_home_to_list"
            app:destination="@id/activity_list_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right">

            <argument
                android:name="activityType"
                app:argType="string"
                app:nullable="true" />

        </action>

    </fragment>

    <fragment
        android:id="@+id/activity_list_fragment"
        android:name="br.com.breaktheice.presentation.view.fragment.ActivityListFragment"
        android:label="@string/fragment_activity_list"
        tools:layout="@layout/fragment_activity_list">

        <action
            android:id="@+id/action_list_to_detail"
            app:destination="@id/activity_detail_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right">

            <argument
                android:name="activityId"
                android:defaultValue="0"
                app:argType="integer" />

        </action>

        <action
            android:id="@+id/action_list_to_filter"
            app:destination="@id/activity_filter_fragment" />

        <argument
            android:name="activityType"
            app:argType="string"
            app:nullable="true" />

    </fragment>

</navigation>
