<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="br.com.breaktheice.presentation.viewmodel.MainViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16dp"
                android:minHeight="@dimen/dimen_32dp">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.Appbreaktheice.LabelLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/label_categories" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/activity_type_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                android:padding="@dimen/dimen_8dp"
                tools:itemCount="8"
                tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/item_activity_type"
                tools:orientation="horizontal" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16dp"
                android:minHeight="@dimen/dimen_32dp">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.Appbreaktheice.LabelLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dimen_2dp"
                    android:layout_toStartOf="@id/more_activity_button"
                    android:text="@string/label_activities" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/more_activity_button"
                    style="@style/Widget.Appbreaktheice.Button.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="@dimen/dimen_2dp"
                    android:paddingVertical="@dimen/dimen_0dp"
                    android:paddingStart="@dimen/dimen_8dp"
                    android:paddingEnd="@dimen/dimen_0dp"
                    android:text="@string/label_more"
                    app:icon="@drawable/icon_arrow_right"
                    app:iconGravity="end" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/activity_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                android:padding="@dimen/dimen_8dp"
                tools:itemCount="3"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_activity" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</layout>
